# blenders_soccer

./: CMakeLists.txt  README.md  package.xml
launch/: soccer.launch
src/: BallDetection.py  BallPrediction.py  HeadControl.py  ball_detection_node.py  ball_tracker.cpp  body_motion_node.cpp  complementary_filter.py  head_control_node.cpp  head_control_node.py  head_control_node_search.py  pelotahaaros2.py  read_write.cpp  read_write_brujula_nojala.cpp  read_write_noid.cpp  soccer.cpp  vision_node.py
src/Soccer2.0/: BallPrediction.py  HeadControl.py  ball_detection_node.py
src/soccer_tmr_estesi/: goalkeeper.cpp  pelotahaaros2.py  read_write_estesi.cpp
